@@ -6,7 +6,7 @@
 
     <groupId>io.github.oguzkeremyildiz</groupId>
     <artifactId>Cookies</artifactId>
-    <version>1.2.7</version>
+    <version>1.3.2</version>
 
     <name>Cookies</name>
     <description>Java library</description>
@@ -46,16 +46,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <release>14</release>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <release>13</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -102,8 +93,8 @@
     </build>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
